//#service-request-reply
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.helloworld";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service GreeterService {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    //#service-request-reply
    //#service-stream
    // The stream of incoming HelloRequest messages are
    // sent out as corresponding HelloReply. From
    // all clients to all clients, like a chat room.
    rpc SayHelloToAll (stream HelloRequest) returns (stream HelloReply) {}
    //#service-stream
    //#service-request-reply
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
//#service-request-reply
